# peg.py

./: LICENSE  Makefile  README.md  dev-dependencies.txt  peg.py  pyproject.toml  shell.nix
tests/: test_ast.py  test_rules.py  test_vm.py
