[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peg.py"
version = "0.1.1"
authors = [
  { name="Ju Lin", email="soasme@example.com" },
]
description = "A Parsing Expression Grammar (PEG) Parser Written in Pure Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/soasme/peg.py"
"Bug Tracker" = "https://github.com/soasme/peg.py/issues"
